@@ -32,8 +32,8 @@ namespace gameswf
 		"X.X..X..X..X..X                 ",
 		"X.X..X..X..X..X                 ",
 		"X....X..X..X..X                 ",
-		"X.............X                 ",
-		" X...........X                  ",
+		"X..........X..X                 ",
+		" X............X                 ",
 		" X...........X                  ",
 		" X...........X                  ",
 		" X...........X                  ",
